tests/miniJava/neg/004398_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public true int [] java ( ) { return 0 ; } }
